--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>2.6.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>university</artifactId>
+    <groupId>ru.hogwarts</groupId>
+    <artifactId>school</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>university</name>
-    <description>university</description>
+    <name>school</name>
+    <description>school</description>
     <properties>
         <java.version>11</java.version>
     </properties>
